<resources>
    <string name="app_name">QR Scanner &#38; Generator</string>
    <string name="permission_name">Access location</string>
    <string name="permission_message_body">Access Fine Location</string>
    <string name="permission_ok">granted</string>
    <string name="permission_deny">deny</string>
    <string name="contact">Contact</string>
    <string name="text">Text</string>
    <string name="link">link</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="organization">Organization</string>
    <string name="email" translatable="false">Email</string>
    <string name="notes">Note</string>
    
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="enter_phone_number">Enter contact</string>
    <string name="enter_text">Enter text</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_link">Enter link</string>
    <string name="generate">create</string>
    <string name="save">Save</string>
    <string name="name">Full name</string>
    <string name="lastname">Last name</string>
    <string name="please_waiting">Please waiting...</string>
    <string name="access_location">Access location</string>
    <string name="permission_denied">Permission denied</string>
    <string name="location_title">Your location (Lat,Lon)</string>
    <string name="unable_gsp">GPS unable</string>
    <string name="phone_number_text">"phone number: "</string>
    <string name="name_text">", name: "</string>
    <string name="lastname_text">", lastname: "</string>
    <string name="enter_text_pl">Enter text!</string>
    <string name="save_to">"Image saved to "</string>
    <string name="change_color">Change color</string>
    <string name="scanner">scanner</string>
    <string name="result">result</string>

    <string name="fragment_location">Location</string>
    <string name="fragment_contact">Contact</string>
    <string name="fragment_result">Scan result</string>
    <string name="fragment_result_qr">Generated</string>
    <string name="fragment_text">Text</string>
    <string name="color">color</string>
    <string name="required">This a required field</string>
    <string name="textCopied">text copied</string>
    <string name="paste">paste</string>

    <string-array name="item_menu">
        <item>QR Scanner</item>
        <item>QR from image</item>
        <item>QR contact</item>
        <item>QR text</item>
        <item>QR Location</item>
        <item>QR Wi-Fi</item>
        <item>QR Email</item>
        <item>QR SMS</item>
        <item>QR Phone number</item>
    </string-array>

    <string name="qr_scanner">QR Scanner</string>
    <string name="qr_from_image">QR from image</string>
    <string name="qr_contact">QR contact</string>
    <string name="qr_text">QR text</string>
    <string name="qr_location">QR Location</string>
    <string name="qr_wi_fi">QR Wi-Fi</string>
    <string name="qr_email">QR Email</string>
    <string name="qr_sms">QR SMS</string>
    <string name="qr_phone_number">QR Phone number</string>

    <string-array name="type">
        <item>WPA/WPA2</item>
        <item>WEP</item>
        <item>No password</item>
    </string-array>

    <string name="menu">Menu</string>

    <string name="hidden">hidden</string>
    <string name="ssid_network_name">SSID/Network name</string>
    <string name="password">Password</string>
    <string name="wifi">Wi-Fi</string>
    <string name="share">Share</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="sms" translatable="false">SMS</string>

    <string name="goto_link">Following a link</string>
    <string name="folow_link">Follow the link?</string>
    <string name="option_information">Option information</string>
    <string name="share_scan_result">share scan result</string>
    <string name="web_search">web search</string>
    <string name="copy_to_clipboard">copy to clipboard</string>
    <string name="search_internet">search result on the internet</string>


</resources>
