<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/qrScanner"
        android:title="@string/qr_scanner"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        />

    <item
        android:id="@+id/qrFromImage"
        android:title="@string/qr_from_image"
        android:icon="@drawable/ic_baseline_image_24"
        />

    <item
        android:id="@+id/qrContact"
        android:title="@string/qr_contact"
        android:icon="@drawable/ic_baseline_contact_page_24"
        />

    <item
        android:id="@+id/qrText"
        android:title="@string/qr_text"
        android:icon="@drawable/ic_baseline_text_fields_24"
        />

    <item
        android:id="@+id/qrLocation"
        android:title="@string/qr_location"
        android:icon="@drawable/ic_baseline_edit_location_24"
        />

    <item
        android:id="@+id/qrWiFi"
        android:title="@string/qr_wi_fi"
        android:icon="@drawable/ic_baseline_wifi_24"
        />

    <item
        android:id="@+id/qrEmail"
        android:title="@string/qr_email"
        android:icon="@drawable/ic_baseline_email_24"
        />

    <item
        android:id="@+id/qrSms"
        android:title="@string/qr_sms"
        android:icon="@drawable/ic_baseline_sms_24"
        />

    <item
        android:id="@+id/qrPhone"
        android:title="@string/qr_phone_number"
        android:icon="@drawable/ic_baseline_phone_24"
        />
</menu>