<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PhoneFragmentGeneration">

    <Button
        android:id="@+id/button_generate_phne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btnStyle"
        android:text="@string/generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_generate_phne"
        android:orientation="vertical"
       >

        <TextView
            android:id="@+id/textView"
            style="@style/textViewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_phone_number" />

        <EditText
            android:id="@+id/editTextPhone"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/enter_phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextTextName"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>