<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/option_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/zxing_transparent"
            app:srcCompat="@drawable/ic_baseline_share_24" />

        <TextView
            android:text="@string/share_scan_result"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/zxing_transparent"
            app:tint="#000000"
            tools:src="@drawable/ic_baseline_search_24" />

        <TextView
            android:text="@string/web_search"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/zxing_transparent"
            app:srcCompat="@drawable/ic_baseline_content_copy_24" />

        <TextView
            android:text="@string/copy_to_clipboard"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/ok"
        android:textSize="16sp"
        android:padding="16dp"
        android:textColor="@color/blue_300"
        android:layout_gravity="center"
        android:text="@android:string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>