<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/background"
    tools:context=".fragments.WifiFragment">

    <androidx.cardview.widget.CardView
        style="@style/cardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/darkThemeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_margin="8dp"
                app:errorIconDrawable="@color/design_default_color_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNameWifi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/editText"
                    android:hint="@string/ssid_network_name"
                    android:gravity="top"
                    android:paddingHorizontal="8dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/darkThemeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_margin="8dp"
                app:errorIconDrawable="@color/design_default_color_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordWifi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/editText"
                    android:hint="@string/password"
                    android:gravity="top"
                    android:paddingHorizontal="8dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/hidden"
                android:text="@string/hidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>